--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-        <h1>my first heading</h1>
+        <h1>my first feature commit</h1>
         <h2>my second heading</h2>
         <h3>my first heading</h3> 
         <h4>my first heading</h4>
