--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -5,11 +5,14 @@
 <style>
     body{background-color: royalblue; color:aliceblue}
     div {background-color: purple; color:aliceblue}
-    
+    .input-group{
+        display: flex;
+        flex-direction: column;
+    }
 </style>
     </head>
     <body>
-        
+        <a href="title" id="title"
         <h1 style="text-align:center">my first feature commit</h1>
         <h2>my second heading</h2>
         <h3>my first heading</h3> 
@@ -27,7 +30,7 @@
             <p>x<sup>100</sup></p>
             <p>h<ul>2</ul>o</p>
         </div>
-        <div>
+        <div class="input-group">
             <input type="date"/>
             <input type="text" />
             <input type="file" />
